 2003-05-04 Al Riddoch <alriddoch@zepler.org>,
    - Add a second pkgconfig file for apps that need unix socket support.
    - Rename sksystem.h as skstreamconfig.h, and put it in an architecture
      dependent subdir. Modify pkgconfig files to handle this.
    - Handle errors in a more general way to reduce the number
      of places where pre-processor conditionals are required.
    - Remove some redundant code for dealing with win32 that has
      now been superceded.
 2003-04-22 Al Riddoch <alriddoch@zepler.org>,
    - Add configure checks and support for protocol family independant
      socket address functions, so we can support IPv6 as well as IPv4.
 2003-04-16 Al Riddoch <alriddoch@zepler.org>,
    - Fix up includes so they work properlly
 2003-04-16 Al Riddoch <alriddoch@zepler.org>,
    - Move source into subdir for portability
 2003-04-09 Al Riddoch <alriddoch@zepler.org>,
    - Fix problem caused by ending variable name with _HEADERS.
 2003-03-18 Al Riddoch <alriddoch@zepler.org>,
    - Improve safety of some constructors, and move IP (host and port)
      related functions into apropriate classes.
    - Add in unix sockets, based on a configure check.
 2003-03-18 Al Riddoch <alriddoch@zepler.org>,
    - Remove legacy skstream-config script to avoid clash with stable version.
 2003-03-18 Al Riddoch <alriddoch@zepler.org>,
    - Increment API to version 0.3, and reset interface version, so
      this version can co-exist with 0.2.x
 2003-03-16 Al Riddoch <alriddoch@zepler.org>,
    - skstream.cpp: Fix problem with virtual method being called
      after destructor.
 2003-03-14 Al Riddoch <alriddoch@zepler.org>,
    - skstream.h, skstream.cpp: Re-work sockbuf class so it is
      not specific to any one type of socket. Remove inet
      functionality from base classes. Derive new buffer
      classes for stream and datagram sockets, and use
      stream version in current socket classes. This should